--- a/package.json
+++ b/package.json
@@ -102,9 +102,9 @@
         "postcss": "^8.4.23",
         "postcss-flexbugs-fixes": "^5.0.2",
         "postcss-loader": "^7.3.0",
+        "postcss-mobile-forever": "^3.4.2",
         "postcss-normalize": "^10.0.1",
         "postcss-preset-env": "^8.3.2",
-        "postcss-px-to-viewport": "^1.1.1",
         "preload-webpack-plugin": "^3.0.0-beta.4",
         "prettier": "^2.8.8",
         "sass-loader": "^13.2.2",
